--- a/styles/main.css
+++ b/styles/main.css
@@ -406,7 +406,7 @@ img {
 .container {
   margin: 0 auto;
   max-width: 1248px;
-  padding: 0 15px;
+  padding: 0 25px;
 }
 
 .section {
@@ -961,7 +961,6 @@ label > input {
 .preview {
   color: #333333;
   font-size: 16px;
-  padding: 0 10px;
 }
 
 .preview__title {
@@ -979,6 +978,46 @@ label > input {
   line-height: 1.5em;
   word-spacing: 0.6em;
   margin-bottom: 20px;
+}
+
+.services {
+  color: #000000;
+}
+
+.services__card {
+  position: relative;
+  width: 100%;
+  height: 50px;
+}
+
+.services__content {
+  position: relative;
+  margin: 0;
+}
+
+.services__name-link {
+  color: #000000;
+}
+.services__name-link::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.services__name-link::after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+}
+
+.services__img {
+  width: 100%;
 }
 
 @media (min-width: 560px) {
