--- a/styles/main.css
+++ b/styles/main.css
@@ -987,7 +987,13 @@ label > input {
 .services__card {
   position: relative;
   width: 100%;
-  height: 50px;
+  height: auto;
+  background-color: #333;
+  margin-bottom: 100px;
+  border-radius: 10px;
+}
+.services__card:hover {
+  opacity: 0.1;
 }
 
 .services__content {
@@ -995,8 +1001,12 @@ label > input {
   margin: 0;
 }
 
+.services__name {
+  padding: 10px 20px;
+}
+
 .services__name-link {
-  color: #000000;
+  color: #fff;
 }
 .services__name-link::after {
   content: "";
@@ -1018,6 +1028,7 @@ label > input {
 
 .services__img {
   width: 100%;
+  border-radius: 10px;
 }
 
 @media (min-width: 560px) {
