--- a/styles/main.css
+++ b/styles/main.css
@@ -963,12 +963,6 @@ label > input {
   font-size: 16px;
 }
 
-.preview__title {
-  font-size: 26px;
-  font-weight: 700;
-  text-align: center;
-}
-
 .preview__link {
   color: #d1a954;
   border-bottom: 1px solid #dda429;
@@ -988,12 +982,13 @@ label > input {
   position: relative;
   width: 100%;
   height: auto;
-  background-color: #333;
-  margin-bottom: 100px;
+  background-color: rgba(51, 51, 51, 0.65);
+  margin-bottom: 25px;
   border-radius: 10px;
+  font-weight: 600;
 }
-.services__card:hover {
-  opacity: 0.1;
+.services__card:hover .test {
+  opacity: 1;
 }
 
 .services__content {
@@ -1002,11 +997,31 @@ label > input {
 }
 
 .services__name {
+  position: absolute;
+  bottom: 0;
   padding: 10px 20px;
+  text-align: center;
+}
+.services__name::after {
+  z-index: 1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #d1a954;
+  -webkit-transform: skewX(-35deg);
+          transform: skewX(-35deg);
+  bottom: 0;
+  left: 0;
 }
 
 .services__name-link {
+  z-index: 2;
+  position: relative;
+  text-transform: uppercase;
   color: #fff;
+  letter-spacing: 0.1em;
+  line-height: 1.3em;
 }
 .services__name-link::after {
   content: "";
@@ -1026,9 +1041,26 @@ label > input {
   box-sizing: border-box;
 }
 
+picture {
+  display: flex;
+}
+
 .services__img {
   width: 100%;
-  border-radius: 10px;
+  height: auto;
+}
+.test {
+  position: absolute;
+  top: 0;
+  color: #000000;
+  opacity: 0;
+}
+
+.section__title {
+  font-size: 26px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 35px;
 }
 
 @media (min-width: 560px) {
@@ -1102,6 +1134,14 @@ label > input {
   }
   .header__form input::placeholder {
     font-size: 16px;
+  }
+  .services__container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .services__img {
+    height: 200px;
   }
 }
 
@@ -1206,6 +1246,9 @@ label > input {
   .header__form-title {
     font-size: 30px;
     text-align: start;
+  }
+  .services__card {
+    width: 49%;
   }
 }
 
@@ -1342,6 +1385,12 @@ label > input {
   }
   .header__form input::placeholder {
     font-size: 16px;
+  }
+  .services__name-link {
+    font-size: 1.3em;
+  }
+  .services__img {
+    height: auto;
   }
 }
 
